--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/blog
+    url: jdbc:h2:tcp://localhost/~/tumblbug
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -11,6 +11,14 @@ spring:
       hibernate:
 #        show_sql: true
         format_sql: true
+  messages:
+    basename: messages, errors
 logging.level:
   org.hibernate.SQL: debug
+server:
+  servlet:
+    session:
+      tracking-modes: cookie
+file:
+  dir: C:/projects/file/
 #  org.hibernate.type: trace
