--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,10 @@ spring:
         format_sql: true
   messages:
     basename: messages, errors
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
 logging.level:
   org.hibernate.SQL: debug
 server:
