--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,2 +1,14 @@
 idPasswordMismatch=아이디 또는 비밀번호가 맞지 않습니다.
 duplicateLoginId=이미 존재하는 로그인 ID입니다.
+typeMismatch.java.time.LocalDate=날짜 형식에 맞게 입력해 주세요.
+NotNull.category=카테고리를 선택해 주세요.
+Size.java.lang.String={2}자 이상 {1}자 이하로 입력해 주세요.
+Range.int={2}원 이상 {1}원 이하로 입력해 주세요.
+NotNull=필수 항목입니다.
+NotEmpty=필수 항목입니다.
+NotEmpty.loginId=아이디를 입력해 주세요.
+NotEmpty.password=비밀번호를 입력해 주세요.
+passedDate=이미 지난 날짜는 입력할 수 없습니다.
+empty.mainImage=메인 이미지는 필수입니다.
+Size.subImages=서브 이미지는 최대 {1}장까지 등록 가능합니다.
+Size.info=자기소개는 최대 {1}자까지 입력 가능합니다.
