--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/tumblbug
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    #url: jdbc:h2:tcp://localhost/~/tumblbug
+    url: jdbc:mariadb://localhost:3307/tumblbug
+    username: admin
+    password: 1111
+    #driver-class-name: org.h2.Driver
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
         #        show_sql: true
