--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
+/*
 buildscript {
 	ext {
 		queryDslVersion = "5.0.0"
 	}
 }
+ */
 
 plugins {
 	id 'org.springframework.boot' version '2.7.4'
 	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
-	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+	//id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 	id 'java'
 }
 
@@ -30,10 +32,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-	implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
+	//implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
+	//implementation "com.querydsl:querydsl-apt:${queryDslVersion}"
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.4'
@@ -42,7 +44,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
+/*
 def querydslDir = "$buildDir/generated/querydsl"
 
 querydsl {
@@ -61,3 +63,4 @@ configurations {
 	}
 	querydsl.extendsFrom compileClasspath
 }
+ */
