Refactor: 이미지 파일 저장 경로 프로젝트 내부로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,7 +38,7 @@ logging.level:
 #  org.hibernate.type: trace
 
 file:
-  dir: C:/projects/file/
+  dir: file/
 
 ---
 
@@ -58,4 +58,4 @@ spring:
       ddl-auto: update
 
 file:
-  dir: C:/projects/file/
+  dir: file/
