Feat: 컨테이너 실행 위한 파일 생성 및 설정 파일 수정
Dockerfile, docker-compose.yml 작성
application.yml로부터 개발 서버 DB 정보를 환경변수로 받도록 하고 환경변수는 env.dev 파일을 이용해서 도커 컴포즈를 통해 주입함
.gitignore에 환경변수 파일 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,9 @@ server:
     session:
       tracking-modes: cookie
 
+file:
+  dir: file
+
 ---
 
 spring:
@@ -34,9 +37,6 @@ spring:
         show_sql: true
         format_sql: true
 
-file:
-  dir: file
-
 ---
 
 spring:
@@ -45,14 +45,11 @@ spring:
       on-profile: dev
 
   datasource:
-    url: jdbc:mariadb://localhost:3306/tumblbug
-    username: admin
-    password: 1111
+    url: jdbc:mariadb://${DB_HOST}:${DB_PORT}/tumblbug
+    username: ${DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: org.mariadb.jdbc.Driver
 
   jpa:
     hibernate:
       ddl-auto: update
-
-file:
-  dir: file
